--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /target
 etc/system-contracts/.yarn
 etc/system-contracts/node_modules
+etc/system-contracts/cache-zk
+etc/system-contracts/artifacts-zk
+etc/system-contracts/typechain-types
+etc/system-contracts/.yarnrc.yml
