--- a/etc/system-contracts/package.json
+++ b/etc/system-contracts/package.json
@@ -16,11 +16,12 @@
     "@matterlabs/hardhat-zksync-solc": "^0.3.15",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/ethers-v6": "0.4.0",
+    "@typechain/hardhat": "8.0.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.34",
     "chai": "^4.3.6",
-    "hardhat-typechain": "^0.3.5",
     "mocha": "^10.0.0",
     "prettier": "^2.3.0",
     "prettier-plugin-solidity": "^1.0.0-alpha.27",
