--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ etc/system-contracts/cache-zk
 etc/system-contracts/artifacts-zk
 etc/system-contracts/typechain-types
 etc/system-contracts/.yarnrc.yml
+etc/system-contracts/bootloader/build
+
+*.zbin
