--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "era_test_node"
-version = "1.0.2"
+version = "1.0.3"
 edition = "2018"
 authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
 homepage = "https://zksync.io/"
@@ -29,6 +29,8 @@ once_cell = "1.7"
 
 jsonrpc-http-server = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }
 jsonrpc-core = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }
+jsonrpc-core-client = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }
+jsonrpc-derive = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }
 
 clap = { version = "4.2.4", features = ["derive"] }
 reqwest = { version = "0.11", features = ["blocking"] }
