--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,4 @@ bigdecimal = { version = "0.2.0" }
 hex = "0.4"
 ethabi = "16.0.0"
 itertools = "0.10.5"
+chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
