Use fork of zksync-era vm as dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,15 @@ categories = ["cryptography"]
 publish = false # We don't want to publish our binaries.
 
 [dependencies]
-zksync_basic_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e575ec101fe88627ab541a52464ab5025c16e6b4" }
-zksync_core = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e575ec101fe88627ab541a52464ab5025c16e6b4" }
-vm = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e575ec101fe88627ab541a52464ab5025c16e6b4" }
-vlog = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e575ec101fe88627ab541a52464ab5025c16e6b4" }
-zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e575ec101fe88627ab541a52464ab5025c16e6b4" }
-zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e575ec101fe88627ab541a52464ab5025c16e6b4" }
-zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e575ec101fe88627ab541a52464ab5025c16e6b4" }
-zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e575ec101fe88627ab541a52464ab5025c16e6b4" }
-zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e575ec101fe88627ab541a52464ab5025c16e6b4" }
+zksync_basic_types = { git = "https://github.com/lambdaclass/zksync-era.git", branch = "return-data-length" }
+zksync_core = { git = "https://github.com/lambdaclass/zksync-era.git", branch = "return-data-length" }
+vm = { git = "https://github.com/lambdaclass/zksync-era.git", branch = "return-data-length" }
+vlog = { git = "https://github.com/lambdaclass/zksync-era.git", branch = "return-data-length" }
+zksync_contracts = { git = "https://github.com/lambdaclass/zksync-era.git", branch = "return-data-length" }
+zksync_types = { git = "https://github.com/lambdaclass/zksync-era.git", branch = "return-data-length" }
+zksync_utils = { git = "https://github.com/lambdaclass/zksync-era.git", branch = "return-data-length" }
+zksync_state = { git = "https://github.com/lambdaclass/zksync-era.git", branch = "return-data-length" }
+zksync_web3_decl = { git = "https://github.com/lambdaclass/zksync-era.git", branch = "return-data-length" }
 
 anyhow = "1.0"
 tokio = { version = "1", features = ["time", "rt"] }
