chore: add cargo clean step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,10 @@ jobs:
         run: rustup target add ${{ matrix.arch }}
       - uses: Swatinem/rust-cache@v2
         with:
-          cache-on-failure: true
+          cache-on-failure: false
+      
+      - name: Run cargo clean
+        run: cargo clean
 
       # ==============================
       #       Builds
