feat: add web-assembly package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,12 @@ itertools = "0.10.5"
 log = "0.4.20"
 simplelog = "0.12.1"
 rustc-hash = "1.1.0"
+wasm-bindgen = "0.2"
+getrandom = { version = "0.2", features = ["js"] }
 
 [dev-dependencies]
 httptest = "0.15.4"
 tempdir = "0.3.7"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
