--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,15 @@ categories = ["cryptography"]
 publish = false # We don't want to publish our binaries.
 
 [dependencies]
-zksync_basic_types = { git = "https://github.com/matter-labs/zksync-era.git", tag = "v7.0.0-rc0" }
-zksync_core = { git = "https://github.com/matter-labs/zksync-era.git", tag = "v7.0.0-rc0" }
-vm = { git = "https://github.com/matter-labs/zksync-era.git", tag = "v7.0.0-rc0" }
-vlog = { git = "https://github.com/matter-labs/zksync-era.git", tag = "v7.0.0-rc0" }
-zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", tag = "v7.0.0-rc0" }
-zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", tag = "v7.0.0-rc0" }
-zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", tag = "v7.0.0-rc0" }
-zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", tag = "v7.0.0-rc0" }
-zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era.git", tag = "v7.0.0-rc0" }
+zksync_basic_types = { git = "https://github.com/matter-labs/zksync-era.git", branch = "boojum-integration" }
+zksync_core = { git = "https://github.com/matter-labs/zksync-era.git", branch = "boojum-integration" }
+vm = { git = "https://github.com/matter-labs/zksync-era.git", branch = "boojum-integration" }
+vlog = { git = "https://github.com/matter-labs/zksync-era.git", branch = "boojum-integration" }
+zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", branch = "boojum-integration" }
+zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", branch = "boojum-integration" }
+zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", branch = "boojum-integration" }
+zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", branch = "boojum-integration" }
+zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era.git", branch = "boojum-integration" }
 
 
 
