--- a/etc/system-contracts/package.json
+++ b/etc/system-contracts/package.json
@@ -10,14 +10,15 @@
     "ethers": "^5.7.0",
     "hardhat": "^2.11.0",
     "preprocess": "^3.2.0",
-    "zksync-web3": "^0.13.0"
+    "zksync-web3": "^0.14.3"
   },
   "devDependencies": {
+    "@matterlabs/hardhat-zksync-chai-matchers": "^0.1.4",
     "@matterlabs/hardhat-zksync-solc": "^0.4.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@typechain/ethers-v5": "^10.0.0",
-    "@typechain/ethers-v6": "0.4.0",
-    "@typechain/hardhat": "8.0.0",
+    "@typechain/hardhat": "^7.0.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.34",
@@ -42,9 +43,8 @@
   },
   "scripts": {
     "build": "hardhat compile",
-    "clean": "hardhat clean && rm -rf ./bootloader/build",
+    "clean": "hardhat clean",
     "preprocess": "rm -rf ./bootloader/build && yarn ts-node scripts/process.ts",
-    "build-bootloader": "yarn hardhat run ./scripts/compile-yul.ts"
-  },
-  "packageManager": "yarn@1.22.19"
+    "compile-yul": "ts-node scripts/compile-yul.ts"
+  }
 }
