fix: boojum integration nightly rust (#177)
Co-authored-by: MexicanAce <nicolasvillanueva@msn.com>

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -6,7 +6,7 @@ on:
     tags:
       - 'v*'
   pull_request:
-    branches: [main]
+    branches: [boojum-integration]
   workflow_dispatch:
 
 jobs:
@@ -16,14 +16,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install latest nightly
-        uses: dtolnay/rust-toolchain@stable
+      - name: Install rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: nightly-2023-07-21
           components: rustfmt, clippy
-
-      - name: Rust Cache
-        uses: Swatinem/rust-cache@v2
 
       - uses: actions/setup-node@v3
         with:
@@ -43,14 +40,11 @@ jobs:
         os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v3
-      
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: stable
 
-      - name: Rust Cache
-        uses: Swatinem/rust-cache@v2
+      - name: Install Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: nightly-2023-07-21
 
       - name: Build Code
         run: make all
