--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,8 +44,8 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
-      - name: Get latest version of stable Rust
-        run: rustup update stable
+      - name: Set version of nightly Rust
+        run: rustup default nightly-2023-07-21
       - name: Install target
         run: rustup target add ${{ matrix.arch }}
       - uses: Swatinem/rust-cache@v2
