--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,11 +2,11 @@ name: run
 
 on:
   push:
-    branches: [main]
+    branches: [boojum-integration]
     tags:
       - 'v*'
   pull_request:
-    branches: [main]
+    branches: [boojum-integration]
   workflow_dispatch:
 jobs:
   test:
@@ -21,15 +21,12 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
-      with: 
-        toolchain: stable
+      uses: actions-rust-lang/setup-rust-toolchain@v1
+      with:
+        toolchain: nightly-2023-07-21
 
-    - name: Cache Rust Dependencies
-      uses: Swatinem/rust-cache@v2
-    
     - name: Install cargo-nextest
-      run: cargo +stable install cargo-nextest
-        
+      run: cargo install cargo-nextest
+
     - name: Run tests
       run: cargo nextest run
