Prepare to merge into main

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -6,7 +6,7 @@ on:
     tags:
       - 'v*'
   pull_request:
-    branches: [boojum-integration]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
