--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ etc/system-contracts/artifacts-zk
 etc/system-contracts/typechain
 etc/system-contracts/.yarnrc.yml
 etc/system-contracts/bootloader/build
+etc/system-contracts/bootloader/test_infra/target
 
 etc/**/*.zbin
 .vscode/*
