--- a/etc/system-contracts/bootloader/test_infra/Cargo.toml
+++ b/etc/system-contracts/bootloader/test_infra/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2021"
 
 [dependencies]
 
-multivm = { git = "https://github.com/matter-labs/zksync-era.git", branch = "sb-short-term-fee-model-1-4-1" }
-zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", branch = "sb-short-term-fee-model-1-4-1" }
-zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", branch = "sb-short-term-fee-model-1-4-1" }
-zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", branch = "sb-short-term-fee-model-1-4-1" }
-zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", branch = "sb-short-term-fee-model-1-4-1" }
-vlog = { git = "https://github.com/matter-labs/zksync-era.git", branch = "sb-short-term-fee-model-1-4-1" }
+multivm = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e7df30f363f4ae12c2a446c03eb84d363fd7bc13" }
+zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e7df30f363f4ae12c2a446c03eb84d363fd7bc13" }
+zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e7df30f363f4ae12c2a446c03eb84d363fd7bc13" }
+zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e7df30f363f4ae12c2a446c03eb84d363fd7bc13" }
+zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e7df30f363f4ae12c2a446c03eb84d363fd7bc13" }
+vlog = { git = "https://github.com/matter-labs/zksync-era.git", rev = "e7df30f363f4ae12c2a446c03eb84d363fd7bc13" }
 
 colored = "2.0"
 hex = "0.4"
