better refresh contracts

--- a/etc/system-contracts/package.json
+++ b/etc/system-contracts/package.json
@@ -22,10 +22,12 @@
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@typechain/ethers-v5": "^2.0.0",
     "@types/chai": "^4.2.21",
+    "@types/elliptic": "^6.4.18",
     "@types/lodash": "^4.14.199",
     "@types/mocha": "^8.2.3",
     "@types/node": "^17.0.34",
     "chai": "^4.3.10",
+    "elliptic": "^6.5.4",
     "hardhat-typechain": "^0.3.3",
     "lodash": "^4.17.21",
     "mocha": "^9.0.2",
