--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,8 @@ chrono = { version = "0.4.31", default-features = false }
 time = "0.3.36"
 toml = "0.8.13"
 fs2 = "0.4"
+notify = "5.1"
+
 
 [dev-dependencies]
 httptest = "0.15.4"
