Starting zk-os version of era-test-node

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -2,11 +2,11 @@ name: checks
 
 on:
   push:
-    branches: [main]
+    branches: [main, zkos-dev]
     tags:
       - 'v*'
   pull_request:
-    branches: [main]
+    branches: [main, zkos-dev]
   workflow_dispatch:
 
 jobs:
@@ -19,7 +19,6 @@ jobs:
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: nightly-2024-08-01
           components: rustfmt, clippy
 
       - uses: actions/setup-node@v3
@@ -43,8 +42,6 @@ jobs:
 
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
-        with:
-          toolchain: nightly-2024-08-01
 
       - name: Build Code
         run: make all
@@ -59,17 +56,3 @@ jobs:
         with:
           name: era_test_node-${{ matrix.os }}.tar.gz
           path: ./target/release/era_test_node-${{ matrix.os }}.tar.gz
-  e2e:
-    needs: build
-    uses: ./.github/workflows/e2e.yml
-    name: e2e-tests
-
-  spec:
-    needs: build
-    uses: ./.github/workflows/spec.yml
-    name: spec-tests
-
-  e2e-rust:
-    needs: build
-    uses: ./.github/workflows/e2e-rust.yml
-    name: e2e-tests-rust
